# Thrust

./: CMakeLists.txt
